@@ -194,6 +194,7 @@ FUSE_2.9 {
 		fuse_start_cleanup_thread;
 		fuse_stop_cleanup_thread;
 		fuse_clean_cache;
+		fuse_reply_mmap;
 
 	local:
 		*;
